--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.0.3
-Werkzeug==2.0.3
-requests==2.26.0
-beautifulsoup4==4.10.0
-gunicorn==20.1.0
+selenium==4.10.0
+selenium-stealth==1.0.6
+beautifulsoup4==4.12.2
+webdriver-manager==3.8.6
