--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.0.3
+Flask==2.1.3
+Werkzeug==2.1.2
 selenium==4.10.0
 selenium-stealth==1.0.6
 beautifulsoup4==4.12.2
 webdriver-manager==3.8.6
-gunicorn==21.2.0
+gunicorn==20.1.0
